# ndktest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/koalareading/com/dnandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDecode.h  AudioDecoe.cpp  JniHelper.cpp  JniHelper.h  MyFfmpeg.cpp  MyFfmpeg.h  VedioDecode.h  VideoDecode.cpp  native-lib.cpp
app/src/main/java/koalareading/com/dnandroid/: DNPlayer.java  MainActivity.java
app/src/main/java/koalareading/com/opengl/: ScreenFilter.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/koalareading/com/dnandroid/: ExampleUnitTest.java
bianyiqi/: main  main.c
dnndkcourse/: Header.h  lessen2.cpp  lessen2.hpp  main.cpp
dnndkcourse.xcodeproj/: project.pbxproj
dnndkcourse.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
dnndkcourse.xcodeproj/project.xcworkspace/xcuserdata/yuanjinsong.xcuserdatad/: UserInterfaceState.xcuserstate
dnndkcourse.xcodeproj/xcuserdata/yuanjinsong.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
dnndkcourse.xcodeproj/xcuserdata/yuanjinsong.xcuserdatad/xcschemes/: dnndkcourse.xcscheme  xcschememanagement.plist
gradle/wrapper/: gradle-wrapper.properties
